support si*sj, tested on jinan:/yeesuanAI03/lzd/tests/large/femoco/uhfconf/originalbasis_su2/init29su2/nonsu2

--- a/pyutils/spinAnalysis/femoco.ipynb
+++ b/pyutils/spinAnalysis/femoco.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "id": "ec17ee63-f436-4a9a-8fe7-5bfb70955942",
    "metadata": {},
    "outputs": [],
@@ -643,24 +643,25 @@
    "id": "b3e88808-cfcd-4219-a53e-c2487148a436",
    "metadata": {},
    "source": [
-    "## Not spin eigenfunction for non-spin-adapted MPS!"
+    "## Do not work for states which is NOT spin eigenfunction for non-spin-adapted MPS!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 5,
    "id": "59153eb1-8b96-4bbe-a6ea-990916feeb32",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "7.171129353336031"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'spinTools' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m spdm \u001b[38;5;241m=\u001b[39m \u001b[43mspinTools\u001b[49m\u001b[38;5;241m.\u001b[39mszHS(pdm1r,pdm2r,n,s) \n\u001b[1;32m      2\u001b[0m np\u001b[38;5;241m.\u001b[39mtrace(spdm)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'spinTools' is not defined"
+     ]
     }
    ],
    "source": [
@@ -669,9 +670,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b515b55-df31-4392-8dc9-c3b6e1d35cff",
+   "metadata": {},
+   "source": [
+    "# Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4557d1b0-0700-4ef7-96ca-b31a78c5a54a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipyscf_real\n",
+    "\n",
+    "mol = 0\n",
+    "mf = 0\n",
+    "mo_coeff = np.zeros((k,k))\n",
+    "nfrozen = 0\n",
+    "\n",
+    "iface = ipyscf_real.iface()\n",
+    "iface.mol = mol\n",
+    "iface.mf = mf\n",
+    "iface.nfrozen = nfrozen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "35e96f3d-1c4a-4421-824b-dc8eeda1ec29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[iface.dumpSiSj] fname= ./femoco/s2tot.info\n",
+      " nact= 76\n",
+      " orblsti= range(0, 76)\n",
+      " orblstj= range(0, 76)\n",
+      "\n",
+      "[iface.dump] fname= ./femoco/s2tot.info\n",
+      "check symmetry of h2e with thresh= 1e-08\n",
+      "   diff(1,0,2,3)= 0.0\n",
+      "   diff(0,1,3,2)= 0.0\n",
+      "   diff(2,3,0,1)= 0.0\n",
+      "finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#orblsti = [2,3,4,5,6]\n",
+    "#orblstj = [16,17,18,19,20]\n",
+    "#iface.dumpSiSj(k,orblsti,orblstj,fname='./femoco/s1s2.info')\n",
+    "orblsti = range(k)\n",
+    "orblstj = range(k)\n",
+    "iface.dumpSiSj(k,orblsti,orblstj,fname='./femoco/s2tot.info')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b773761-d451-4908-9066-8745cbf70efc",
+   "id": "746ca6d7-a2dd-4383-a09d-2285acacc050",
    "metadata": {},
    "outputs": [],
    "source": []
