--- a/pyutils/spinAnalysis/femoco.ipynb
+++ b/pyutils/spinAnalysis/femoco.ipynb
@@ -674,7 +674,7 @@
    "id": "8b515b55-df31-4392-8dc9-c3b6e1d35cff",
    "metadata": {},
    "source": [
-    "# Test"
+    "# Test via <SA*SB>"
    ]
   },
   {
